--- a/viagem.html
+++ b/viagem.html
@@ -37,5 +37,7 @@
     <p><strong>Dicas para quando for viajar: <a href="dicas.html" target="_blank">Clique aqui!</a></strong></p>
     <p><strong>Site oficial de turismo de Paris: <a href="https://parisjetaime.com/eng/">Clique aqui!</a></strong></p>
 
+<img src="torre-eiffel.webp" alt="Torre Eiffel">
+
 </body>
 </html>
